<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".app.MainActivity">

        <TextView
            style="@style/AudioFileInfoOverlayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_home_welcomes_1"
            android:textColor="@color/app_text_tip"
            android:textSize="15sp"
            />

        <TextView
            style="@style/AudioFileInfoOverlayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_home_welcomes_2"
            android:textColor="@color/app_text_tip"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/app_main_menu_1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_css_activity"
            android:textColor="#ffffff"
            android:text="@string/app_home_menu1"
            android:textSize="40sp" />

        <LinearLayout
            android:id="@+id/app_main_menu_2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_css_activity"
            android:clickable="true"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent"
                android:textColor="#ffffff"
                android:clickable="false"
                android:text="@string/app_home_menu2"
                android:textSize="40sp" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:background="@drawable/m2" />
        </LinearLayout>

        <Button
            android:id="@+id/app_main_menu_3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_css_activity"
            android:textColor="#ffffff"
            android:text="@string/app_home_menu3"
            android:textSize="40sp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_home_copyright"
                    android:textColor="@color/app_text_tip1"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/app_home_email"
                    android:textColor="@color/app_text_tip1"
                    android:textSize="14sp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/m_bg"
                android:alpha="0.2"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>
